--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "start": "nodemon app"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.21.2",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "routes": "^2.1.0"
   }
 }
